--- a/cat/scss/style.scss
+++ b/cat/scss/style.scss
@@ -320,7 +320,13 @@ input[type="number"]::-webkit-outer-spin-button {
     top: -6px;
     & img {
       margin: 0 2px;
-    }
+    } 
+  }
+  &__none{
+    font-size: 20px;
+    color: $black;
+    text-align: center;
+    display: block;
   }
 }
 
