--- a/wargaming/css/style.scss
+++ b/wargaming/css/style.scss
@@ -398,6 +398,9 @@ h4,
   }
 }
 @media screen and (max-width: 600px) {
+  html {
+    overflow-x: hidden;
+  }
   .header__topMenuItem-nonePhone {
     display: none;
   }
