--- a/grandioso/css/footer.scss
+++ b/grandioso/css/footer.scss
@@ -1,5 +1,5 @@
 .formSubscription {
-    border-top: 1px solid $greyLight2;
+    border-top: $border;
     &__inner {
         padding: 110px 0;
         display: flex;
@@ -27,7 +27,7 @@
         line-height: 16px;
         letter-spacing: 0.1em;
         // text-transform: uppercase;
-        border: 1px solid $greyLight2;
+        border: $border;
         width: 45%;
         &::placeholder {
             font-family: Open Sans;
@@ -49,7 +49,7 @@
         letter-spacing: 0.1em;
         text-transform: uppercase;
         background-color: $grayLight1;
-        border: 1px solid $greyLight2;
+        border: $border;
         width: 45%;
     }
     @media (max-width: 767px) {
@@ -82,7 +82,7 @@
         padding: 80px 0;
     }
     &__bottom {
-        border: 1px solid rgba(255, 255, 255, 0.3);
+        border-top: 1px solid rgba(255, 255, 255, 0.3);
         padding: 21px 0 31px;
     }
     &__logo {
@@ -135,7 +135,7 @@
         padding: 0;
         line-height: 1;
         margin-bottom: 23px;
-        @media (max-width: 1199px) {
+        @media (max-width: 1365px) {
             font-size: 21px;
         }
     }
