--- a/grandioso/css/pageCase.scss
+++ b/grandioso/css/pageCase.scss
@@ -32,24 +32,7 @@
         background: linear-gradient(to bottom, $greyLight1 65%, $white 65%);
     }
     &__galeryDots {
-        display: flex;
-        justify-content: center;
         margin-top: 40px;
-        padding: 0;
-        & li {
-            list-style-type: none;
-            margin: 0 10px;
-        }
-        & button {
-            margin: 0;
-            padding: 0;
-            font-size: 0;
-            width: 10px;
-            height: 10px;
-            border: 1px solid $black;
-            border-radius: 50%;
-            background-color: transparent;
-        }
     }
     .slick-active button {
         background-color: $black;
@@ -59,5 +42,25 @@
         @media (max-width: 991px) {
             margin: 50px 0 80px;
         }
+    }
+}
+
+.sliderDots {
+    display: flex;
+    justify-content: center;
+    padding: 0;
+    & li {
+        list-style-type: none;
+        margin: 0 10px;
+    }
+    & button {
+        margin: 0;
+        padding: 0;
+        font-size: 0;
+        width: 10px;
+        height: 10px;
+        border: 1px solid $black;
+        border-radius: 50%;
+        background-color: transparent;
     }
 }
